# bagley

./: .env.example  .gitignore  DEPLOY.md  DEPLOY_MAC_KALI.md  LICENSE  PLAN.md  README.md  RELATORIO.md  pyproject.toml
scripts/: auto_pipeline_v9.sh  build_dataset.py  build_dataset_v10.py  build_dataset_v4.py  build_dataset_v5.py  build_dataset_v6.py  build_dataset_v7.py  build_dataset_v8.py  build_dataset_v8_1.py  build_dataset_v9.py  compliant_corpus.py  corpus_v10.py  corpus_v8.py  corpus_v8_1.py  corpus_v9.py  corpus_v9_plus.py  eval.py  eval_bagley.py  install_voice_kali.sh  kali_tools.py  local_export_v10.py  modal_train.py  test_exploitdev.py  test_persona.py  test_v2.py  train_wake_bagley.py  voice_anchors.py
scripts/ingest/: exploitdb.py  exploitdev.py  hacktricks.py  mitre.py  p0_rcas.py
src/bagley/: persona.py
tests/: test_parser.py  test_safeguards.py  test_scope.py  test_v9.py
tests/tui/: conftest.py  test_alerts.py  test_alerts_log.py  test_app_boot.py  test_bang_expansion.py  test_chat_memory_hook.py  test_chat_panel.py  test_dashboard.py  test_engine_registry.py  test_engine_swap.py  test_entrypoint.py  test_graph_layout.py  test_graph_pane.py  test_header.py  test_history.py  test_hosts_panel.py  test_inline_confirm.py  test_inspector_panel.py  test_memory_promoter.py  test_mentions_popup.py  test_minimap.py  test_mode_policy.py  test_modes_bar.py  test_notes_editor.py  test_nudges.py  test_observe_service.py  test_palette.py  test_palette_expanded.py  test_payload_gen.py  test_payload_modal.py  test_plan_generator.py  test_plan_overlay.py  (+24 more)
(+94 files in other folders)
