[project]
name = "bagley"
version = "0.1.0"
description = "IA pessoal de cibersegurança com persona sarcástica britânica. Fine-tune QLoRA sobre Foundation-Sec-8B."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Virgilio" }]

dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=1.1.0",
    "datasets>=3.1.0",
    "trl>=0.12.0",
    "huggingface-hub>=0.26.0",
    "safetensors>=0.4.5",
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "prompt_toolkit>=3.0.50",
    "python-dotenv>=1.0.1",
    "textual>=0.80.0",
    "networkx>=3.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]
tts = ["piper-tts>=1.2.0"]

[project.scripts]
bagley = "bagley.tui.app:run"
bagley-simple = "bagley.agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bagley"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
